# missingno

./: .gitignore  .gitmodules  71-gbxcart.rules  ACKNOWLEDGMENTS  AGENTS.md  Cargo.toml  LICENSE  Pokemon Red-2026-02-10-180255.mnrec  Pokemon Red-2026-02-10-180744.mnrec  README.md  cargo-sources.json  io.github.ajoneil.MissingNo.desktop  io.github.ajoneil.MissingNo.json  io.github.ajoneil.MissingNo.metainfo.xml  justfile  net.andyofniall.MissingNo.desktop  net.andyofniall.MissingNo.json  net.andyofniall.MissingNo.metainfo.xml  net.andyofniall.missingno.desktop  net.andyofniall.missingno.json  net.andyofniall.missingno.metainfo.xml
crates/missingno/: Cargo.toml  build.rs
crates/missingno-gb/: Cargo.toml
crates/missingno-gb/examples/: bench-dmg.rs
crates/missingno-gb/src/: clock.rs  cpu_bus.rs  dma.rs  dmg_sram.rs  execute.rs  interrupts.rs  joypad.rs  lib.rs  master_clock.rs  memory.rs  serial_transfer.rs  sgb.rs  snapshot.rs  test_support.rs  trace.rs
crates/missingno-gb/src/audio/: mod.rs  registers.rs  volume.rs
crates/missingno-gb/src/audio/channels/: mod.rs  noise.rs  pulse.rs  pulse_sweep.rs  registers.rs  wave.rs
crates/missingno-gb/src/cartridge/: mod.rs
crates/missingno-gb/src/cartridge/mbc/: huc1.rs  huc3.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc6.rs  mbc7.rs  mod.rs  no_mbc.rs
crates/missingno-gb/src/cpu/: commit.rs  dff.rs  dispatch_chain.rs  mod.rs
crates/missingno-gb/src/cpu/instructions/: arithmetic.rs  bitwise.rs  carry_flag.rs  jump.rs  mod.rs
crates/missingno-gb/src/cpu/instructions/parameters/: address.rs  parameters_16.rs  parameters_8.rs
crates/missingno-gb/src/cpu/mcycle/: apply.rs  build.rs  execute.rs  fetch.rs  isr.rs  mod.rs  scheduler.rs  types.rs
crates/missingno-gb/src/debugger/: instructions.rs  mod.rs
crates/missingno-gb/src/ppu/: clock_edges.rs  crossing.rs  dff.rs  dividers.rs  line_counter.rs  line_end_pipeline.rs  memory.rs  mod.rs  model.rs  oam_corruption.rs  register_io.rs  registers.rs  rendering.rs  screen.rs  stat_interrupt.rs  video_control.rs
crates/missingno-gb/src/ppu/draw/: fetch_cascade.rs  fetcher.rs  fine_scroll.rs  hblank_pipeline.rs  lcd_control.rs  mod.rs  pixel_counter.rs  pixel_output.rs  shifters.rs  sprite_fetch.rs  sprite_trigger.rs  window_control.rs
crates/missingno-gb/src/ppu/scan/: oam_scan.rs  scanner.rs
crates/missingno-gb/src/ppu/types/: control.rs  mod.rs  palette.rs  sprites.rs  tile_maps.rs  tiles.rs
crates/missingno-gb/src/timers/: mod.rs
crates/missingno-gb/tests/: extension_fields.rs
crates/missingno-gb/tests/accuracy/: age.rs  blargg.rs  bully.rs  gambatte.rs  gbmicrotest.rs  little_things.rs  main.rs  mbc3_tester.rs  mealybug_tearoom.rs  mooneye.rs  mooneye_wilbertpol.rs  scribbltests.rs  turtle_tests.rs
crates/missingno-gb/tests/accuracy/common/: mod.rs
crates/missingno-gb/tests/accuracy/profiles/: gbmicrotest.toml
crates/missingno-gbc/: Cargo.toml
crates/missingno-gbc/examples/: bench.rs
crates/missingno-gbc/src/: dmg_palette_data.rs  execute.rs  lib.rs  memory.rs  screen.rs  timing.rs  trace.rs
crates/missingno-gbc/tests/accuracy/: age.rs  blargg.rs  bully.rs  cgb_acid2.rs  cgb_acid_hell.rs  dmg_acid2.rs  gambatte.rs  little_things.rs  main.rs  mbc3_tester.rs  mealybug_tearoom.rs  mooneye.rs  mooneye_wilbertpol.rs  rtc3test.rs  samesuite.rs  scribbltests.rs  strikethrough.rs  turtle_tests.rs
crates/missingno-gbc/tests/accuracy/common/: mod.rs
crates/missingno-gbc/tests/accuracy/roms/: ATTRIBUTION.md
crates/missingno-gmb/: Cargo.toml
crates/missingno-gmb/src/: dma.rs  execute.rs  joypad.rs  lib.rs  memory.rs  trace.rs
crates/missingno-gmb/src/audio/channels/: registers.rs
crates/missingno-gmb/src/cartridge/mbc/: huc1.rs
crates/missingno-gmb/src/cpu/instructions/: bit_flag.rs  bit_shift.rs  load.rs  stack.rs
crates/missingno-gmb/src/cpu/instructions/parameters/: address.rs  mod.rs
crates/missingno-gmb/src/cpu/mcycle/: build.rs  mod.rs
crates/missingno-gmb/src/debugger/: instructions.rs  mod.rs
crates/missingno-gmb/src/game_boy/: mod.rs  serial_transfer.rs
crates/missingno-gmb/src/game_boy/cartridge/mbc/: huc3.rs  (+2 more)
crates/missingno-gmb/src/game_boy/ppu/: dff.rs  registers.rs  rendering.rs  screen.rs
crates/missingno-gmb/src/ppu/: mod.rs  oam_corruption.rs  rendering.rs  screen.rs
crates/missingno-gmb/src/ppu/draw/: fetch_cascade.rs  fetcher.rs  hblank_pipeline.rs  lcd_control.rs  lcd_shift_register.rs  mod.rs  pixel_output.rs  shifters.rs  sprite_fetch.rs  window_control.rs
crates/missingno-gmb/src/ppu/types/: control.rs  palette.rs
crates/missingno-gmb/tests/accuracy/: blargg.rs  dmg_acid2.rs  gbmicrotest.rs  little_things.rs  mbc3_tester.rs  mooneye.rs  samesuite.rs  strikethrough.rs  turtle_tests.rs
crates/missingno-gmb/tests/accuracy/common/: mod.rs
crates/missingno-gmb/tests/game_boy/: gbmicrotest.rs  samesuite.rs  strikethrough.rs
crates/missingno-gmb/tests/game_boy/common/: mod.rs
crates/missingno/fonts/: OFL.txt
crates/missingno/src/: cartridge_rw.rs  headless.rs  main.rs  render.rs  trace.rs
crates/missingno/src/app/: action_bar.rs  audio_output.rs  console.rs  controls.rs  emulation.rs  game_info_panel.rs  hasheous.rs  library.rs  library_view.rs  load.rs  mod.rs  recent.rs  scanner.rs  screen.rs  settings.rs  settings_view.rs  texture_renderer.rs  views.rs
crates/missingno/src/app/core/: buttons.rs  fonts.rs  text.rs
crates/missingno/src/app/debugger/: breakpoints.rs  cpu.rs  instructions.rs  interrupts.rs  mod.rs  panes.rs  playback.rs  screen.rs  sidebar.rs
crates/missingno/src/app/emulator/: mod.rs
crates/missingno/src/app/settings/: mod.rs  update.rs  view.rs
crates/missingno/src/app/ui/: buttons.rs  containers.rs  mod.rs  palette.rs  sizes.rs  text.rs
crates/missingno/src/link_cable/: mod.rs  protocol.rs
(+437 files in other folders)
