[workspace]
members = ["core"]

[package]
name = "missingno"
version = "26.2.0"
authors = ["Andrew O'Neil <andy@andyofniall.net>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "missingno"
path = "src/main.rs"

[dependencies]
missingno-core = { path = "core" }
cpal = "0.17"
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.5.57", features = ["derive"] }
iced = { version = "0.14.0", features = [
    "advanced",
    "smol",
    "svg",
    "wgpu",
] }
replace_with = "0.1.8"
rtrb = "0.3"
rgb = { workspace = true }
rfd = "0.17.2"
gilrs = "0.11"
smol = "2"
jiff = "0.2"
dirs = "6"
open = "5"

[workspace.dependencies]
bitflags = "2.10.0"
rgb = "0.8.52"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.missingno-core]
opt-level = 1
