[workspace]
resolver = "3"
members = ["crates/missingno", "crates/missingno-gb", "crates/missingno-gbc"]

[workspace.dependencies]
bitflags = "2.11.1"
rgb = "0.8.53"

[profile.release]
lto = "fat"
codegen-units = 1

# Release codegen with debug symbols, for profiling.
[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.missingno-gb]
opt-level = 1

[profile.dev.package.missingno-gbc]
opt-level = 1
