[package]
name = "missingno-gbc"
version = "0.0.1"
authors = ["Andrew O'Neil <andy@andyofniall.net>"]
edition = "2024"
license = "MIT"

[features]
test-support = ["missingno-gb/test-support"]
gbtrace = ["missingno-gb/gbtrace"]

[dependencies]
missingno-gb = { path = "../missingno-gb" }
rgb = { workspace = true }

[dev-dependencies]
missingno-gbc = { path = ".", features = ["test-support"] }
png = "0.18"
