[package]
name = "missingno-gmb"
version = "0.0.1"
authors = ["Andrew O'Neil <andy@andyofniall.net>"]
edition = "2024"
license = "MIT"

[features]
gbtrace = ["dep:gbtrace", "dep:sha2"]

[dependencies]
bitflags = { workspace = true }
rgb = { workspace = true }
gbtrace = { path = "../../../gbtrace/crates/gbtrace", optional = true, features = ["parquet"] }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
png = "0.17"
